--- a/todo-api/docker-compose.yml
+++ b/todo-api/docker-compose.yml
@@ -3,16 +3,20 @@ services:
   api:
     build: ./
     ports:
-      - "9000:80"
+      - "9001:9000"
     environment:
       DATABASE_SERVER: "sqlserver"
       DATABASE_AUTHENTICATION_TYPE: "default"
       DATABASE_AUTHENTICATION_USERNAME: "sa"
       DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
-      DATABASE_OPTION_DATABASE: "Todos"
+      DATABASE_OPTION_DATABASE: "TodosDB"
       API_PORT: "9000"
       SERVER_TAG: "api"
-  todosdb:
+    depends_on:
+      - db
+    links:
+      - "db"
+  db:
     image: "mcr.microsoft.com/mssql/server"
     user: "0:0"
     hostname: "sqlserver"
