--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: "3.3"
 services:
   web:
-    build: ./todo-app/
+    build:
+      context: ./todo-app/
+      args:
+        - URL="urldeappi"
     ports:
       - "9002:80"
     depends_on:
