--- a/todo-api/docker-compose.yml
+++ b/todo-api/docker-compose.yml
@@ -1,7 +1,18 @@
 version: "3.3"
 services:
-  api:
-    build: ./todo-api/
+  api-balancer:
+    build: ./../api-loadbalancer/
+    ports:
+      - "9000:80"
+    depends_on:
+      - api1
+      - api2
+      - api3
+      - api4
+      - api5
+      - api6
+  api1:
+    build: ./
     ports:
       - "9001:9000"
     environment:
@@ -11,7 +22,87 @@ services:
       DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
       DATABASE_OPTION_DATABASE: "TodosDB"
       API_PORT: "9000"
-      SERVER_TAG: "api"
+      SERVER_TAG: "api1"
+    depends_on:
+      - db
+    links:
+      - "db"
+  api2:
+    build: ./
+    ports:
+      - "9002:9000"
+    environment:
+      DATABASE_SERVER: "sqlserver"
+      DATABASE_AUTHENTICATION_TYPE: "default"
+      DATABASE_AUTHENTICATION_USERNAME: "sa"
+      DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
+      DATABASE_OPTION_DATABASE: "TodosDB"
+      API_PORT: "9000"
+      SERVER_TAG: "api2"
+    depends_on:
+      - db
+    links:
+      - "db"
+  api3:
+    build: ./
+    ports:
+      - "9003:9000"
+    environment:
+      DATABASE_SERVER: "sqlserver"
+      DATABASE_AUTHENTICATION_TYPE: "default"
+      DATABASE_AUTHENTICATION_USERNAME: "sa"
+      DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
+      DATABASE_OPTION_DATABASE: "TodosDB"
+      API_PORT: "9000"
+      SERVER_TAG: "api3"
+    depends_on:
+      - db
+    links:
+      - "db"
+  api4:
+    build: ./
+    ports:
+      - "9004:9000"
+    environment:
+      DATABASE_SERVER: "sqlserver"
+      DATABASE_AUTHENTICATION_TYPE: "default"
+      DATABASE_AUTHENTICATION_USERNAME: "sa"
+      DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
+      DATABASE_OPTION_DATABASE: "TodosDB"
+      API_PORT: "9000"
+      SERVER_TAG: "api4"
+    depends_on:
+      - db
+    links:
+      - "db"
+  api5:
+    build: ./
+    ports:
+      - "9005:9000"
+    environment:
+      DATABASE_SERVER: "sqlserver"
+      DATABASE_AUTHENTICATION_TYPE: "default"
+      DATABASE_AUTHENTICATION_USERNAME: "sa"
+      DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
+      DATABASE_OPTION_DATABASE: "TodosDB"
+      API_PORT: "9000"
+      SERVER_TAG: "api5"
+    depends_on:
+      - db
+    links:
+      - "db"
+  api6:
+    build: ./
+    ports:
+      - "9006:9000"
+    environment:
+      DATABASE_SERVER: "sqlserver"
+      DATABASE_AUTHENTICATION_TYPE: "default"
+      DATABASE_AUTHENTICATION_USERNAME: "sa"
+      DATABASE_AUTHENTICATION_PASSWORD: "Channel123*"
+      DATABASE_OPTION_DATABASE: "TodosDB"
+      API_PORT: "9000"
+      SERVER_TAG: "api6"
     depends_on:
       - db
     links:
